finished styling and adding an exception for if user_id cannot be found

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,10 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-h1 {
-    color: red;
+img {
+    height: 450px;
+    width: 100%
 }
 
-img {
-    height: 50px;
+.image-container {
+
 }
